muoni/GraalVM/language/tests/error/TypeError03.hn
fn main() {
  "4" and 4;
}  
