muoni/GraalVM/language/tests/error/TypeError03.output
Type error at TypeError03.hn line 2 col 3: operation "and" not defined for String "4", ANY
